# Tarea-3

./: .gitignore  CMakeLists.txt  README.md
Stage1 (4)/: ._VideoFollower.java  ._VideoPublisher.java  PubSubsPatternSimulator.java  VideoFollower.java  VideoPublisher.java
cpp/Stage1/: CMakeLists.txt
cpp/Stage1/src/: Stage1.cpp
cpp/src/: VideoFollower.cpp
